<resources>
    <string name="app_name">Common</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密&#8201;&#160;&#160;&#8201;码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="regist">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="get_code">获取验证码</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="hint_password_agin">请再次输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_reserve">酒店预定</string>
    <string name="hour_room">钟点房</string>
    <string name="live_time">5晚</string>
    <string name="check_in_time">入住时间</string>
    <string name="check_out_time">离店时间</string>
    <string name="immeidate_reserve">立即预定</string>
</resources>
