<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegistActivity">

    <com.sincere.common.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/regist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_16" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/selector_get_code_btn"
                android:text="@string/get_code"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/bg_login_edit"
            android:hint="@string/hint_input_code"
            android:inputType="number"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/bg_login_edit"
            android:hint="@string/hint_password"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_password_agin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/bg_login_edit"
            android:hint="@string/hint_password_agin"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_login_btn"
            android:text="@string/regist"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>